# libaqua2

./: CMakeLists.txt
include/aqua2/: gamepad.h  keyinput.h  serialport.h  serversocket.h  socket.h
tests/: gamepad_test.cpp  serialport_test.cpp
